--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,20 @@ p {
     margin-top: 10px;
     font-size: 16px;
 }
+@media (max-width: 768px) {
+    h1 {
+        font-size: 36px;
+    }
+    
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    .images img {
+        max-width: 100px; /* Ajusta o tamanho das imagens para telas menores */
+    }
+}
